--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-PORT=PORT=3002
+PORT=
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -7,4 +7,7 @@ PORT=PORT=3002
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:admin@localhost:5432/ordersdb?schema=public"
+DATABASE_URL=
+
+
+NATS_SERVERS=
