--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 
 services:
   orders-db:
@@ -6,10 +5,12 @@ services:
     image: postgres:16.2
     restart: always
     volumes:
-      - ./postgres:/var/lib/postgresql/data
+      - orders-db:/var/lib/postgresql/data
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=ordersdb
+volumes:
+  orders-db:
